# mk-mcp-skills-manager

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
docs/: PRODUCT_PRD.md  implementation-task-breakdown.md  technical-implementation-plan.md
docs/qa/: development-checklist.md  mvp-qa-checklist.md
fixtures/agents/: README.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql  0002_resource_binding_metadata.sql  0003_change_sets_intent.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/adapters/: claude_code.rs  codex.rs  common.rs  mock.rs  mod.rs  opencode.rs  pi.rs  registry.rs  traits.rs
src-tauri/src/commands/: agents.rs  app.rs  backups.rs  changes.rs  doctor.rs  library.rs  mod.rs  projects.rs  prompts.rs  resources.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/domain/: enums.rs  mod.rs  models.rs
src-tauri/src/security/: mod.rs  path_guard.rs
src-tauri/src/services/: agents.rs  app_data.rs  backup.rs  changes.rs  diff.rs  doctor.rs  doctor_rules.rs  library.rs  logging.rs  mod.rs  projects.rs  resources.rs  scan.rs
src/components/: DiffPreview.tsx  ErrorMessage.tsx  MatrixTable.tsx  McpForm.tsx  PaginationControls.tsx  ResourceListPage.tsx
src/hooks/: useMcpChangeFlow.ts
src/layout/: AppLayout.css  AppLayout.tsx  Sidebar.tsx  TopBar.tsx
src/lib/: api.ts  pagination.test.ts  pagination.ts
(+31 files in other folders)
