[package]
name = "agenthub-local"
version = "0.1.0"
description = "AgentHub Local - manage Claude Code MCP servers, skills and agents."
authors = ["AgentHub"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "agenthub_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
