[package]
name = "agenthub-local"
version = "0.1.0"
description = "AgentHub Local - manage Claude Code MCP servers, skills and agents."
authors = ["AgentHub"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "agenthub_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
